test-cases/negative/test_084_undefined_function_call.lay
# negative test: calling undefined function
# expected: type checker should catch this

call undefined_function


